# aronabot

./: .gitignore  Cargo.toml
src/: event_handler.rs  main.rs
src/events/: emoji_monitoring.rs  member_verification.rs  mod.rs
